attempt to fix width of 'business card' on mobile

--- a/style.css
+++ b/style.css
@@ -343,12 +343,12 @@ a:hover {
 }
 @media only screen and (max-width:650px){
     .card {
-    width: 400px;
-    height: 200px;
+    width: 380px;
+    height: 190px;
     }
     .card:hover {
-    width: 440px;
-    height: 220px;
+    width: 425px;
+    height: 214px;
     }
 
     #card-h1 {
@@ -369,8 +369,8 @@ a:hover {
 
 @media only screen and (max-width:475px){
     .card {
-    width: 300px;
-    height: 150px;
+    width: 270px;
+    height: 140px;
     }
     .card:hover {
     width: 330px;
